[tool.poetry]
name = "elmito-cli"
version = "0.1.0-beta"
description = "CLI to support basic DJ music selection process"
authors = ["Guillermo Garcia <bitcoder@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
rich = "^13.7.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
